# arif_rate

backend/: .gitignore  README.md  api.py  build.py  generate_dataset.py  live_price_feed.py  main.py  pyproject.toml  requirements.txt
backend/docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BookingForm.tsx  Hero.tsx  Navbar.tsx  RoomList.tsx  SearchWidget.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Help.tsx  Privacy.tsx
frontend/src/utils/: calendars.ts
